--- a/frontend/tutor/src/components/AudioPlayer/AudioPlayer.css
+++ b/frontend/tutor/src/components/AudioPlayer/AudioPlayer.css
@@ -54,7 +54,7 @@
 }
 
 .play-button.playing {
-  background-color: blue;
+  background-color: grey;
   position: relative;
   width: 50px;
   height: 50px;
